--- a/deatil.css
+++ b/deatil.css
@@ -76,8 +76,9 @@
 }
 
 .price-buttons1 .pay {
-  background-color: #28a745;
-  color: white;
+  border: 1px solid #28a745;
+  color: #9FBF1C;
+  background: #28a7469a !important;
 }
 
 .price-buttons1 .wishlist-label {
